<resources>
    <string name="app_name">Førstegangstjeneste A-B-C</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="admob_id">*ADMOB ID*</string>
    <string name="app_id">*APPP ID*</string>
    <string name="image"></string>
    <string name="freeVersion">n</string>
    <string name="myPublicKey">*KEY*</string>
    <string-array name="items">
        <item>Innledning</item>
        <item>Avstandsbedømmelse</item>
        <item>Dimmekalkulator</item>
        <item>Fonetiske Alfabet</item>
        <item>Forkortelser</item>
        <item>Fysiske Krav</item>
        <item>HK-416</item>
        <item>Huskeregler</item>
        <item>Kart og Kompass</item>
        <item>Kneppetelt</item> 
        <item>Målangivelse</item>
        <item>Primus Fyring</item>
        <item>Refselse</item>
        <item>Sanitet Nivå 2</item>
        <item>Tegn og Signaler</item>
        <item>Tips og Triks</item>
        <item>Send inn Forslag</item>
        <item>Logg inn Facebook</item>
        <item>Donation</item>
        <item>Hjelp</item>
        <item>Om Appen</item>
    </string-array>
    <string-array name="items_fonisk">
        <item>- Tilbake</item>
        <item>Fonetiske Alfabet</item>
        <item>Fonetiske Alfabet Test</item>
    </string-array>
    <string-array name="items_tipstriks">
        <item>- Tilbake</item>
        <item>HMKG Tips</item>
        <item>Sengestrekk</item>
        <item>Skapbretting</item>
        <item>Skopuss</item>
        <item>Skosåle</item>
        <item>Truger</item>
    </string-array>
    <string-array name="items_hk416">
        <item>- Tilbake</item>
        <item>HK-416 Kulebane</item>
        <item>HK-416 Våpenpuss</item>
        <item>Aimpoint Justering</item>
        <item>Greps Faktorer</item>
        <item>Magasinbytte</item>
        <item>Tips Sekundærsikte</item>
        <item>Tøm Våpen</item>
    </string-array>
    <string-array name="items_granater">
        <item>- Tilbake</item>
        <item>DM78 - Øvingsgranat</item>
        <item>DM61/DM61A1 - Splintgranat</item>
        <item>HGR85 - Sjokk</item>
        <item>Røykgranat</item>
        <item>Flashbang</item>
        <item>Generell Informasjon</item>
    </string-array>
    <string-array name="items_jenteriforsvaret">
        <item>- Tilbake</item>
        <item>Trening</item>
        <item>Felt</item>
        <item>Utseende</item>
        <item>Sanitære Tips</item>
        <item>Generelle Tips</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="kneppe_del_1">
        
        Under førstegangstjenesten din kommer du til og måtte bli kjent med kneppeteltet.
        \n
        \nDette er en duk som ser ut som julekake, du vil skjønne det når du ser bilde.
        \n
        \nHele poenget med kneppeteltet, er at alle bærer like mye. Og jo flere dere er, desto større telt kan dere få. Dere bruker hverandres telt duker for og kneppe et stort telt, der kan holde varmen.
        \n
        \nDet er to måter og kneppe teltet på. Dobbel knepp og storm knepp. Bildene under beskriver disse.
        
    </string>
    <string name="kneppe_del_2">
        
        Når man har lært kneppe måtene er det kun fantasien som setter begrensinger for hvordan dere knepper teltet.
        \n
        \nDen mest brukte i forsvaret er 7-Duker.
        
    </string>
    <string name="knepe_del_3">
       
        Ovenfor har du et bilde av hvordan en 7-duker skal se ut, før du begynner og kneppe.
        \n
        \nDet som er viktig og huske på er 1, 2 og 3 -er duker. 1 skal på topp, så 2 og der etter 3. Akuratt som om du skulle lagt gran bar opp på hverandre.
        \n
        \nToppen (1 duken) bruker du dobbel knepp på alle dukene som festes i 1 er duken er 2 er duker. Alle 2 duker, og 3 duker brukes storm knepp på. Da renner ikke vann så lett inn.
        \n
        \nDet som også er viktig og huske på er søm og luker. Alle luker og søm skal peke nedover slik at vann ikke renner inn.
        \n
        \nDet samme prinsippet gjelder for alle måter og kneppe på. Under igjen her finner du noen andre bilder av kneppe duker som er mulig.
        
    </string>
    <string name="kneppe_del_4"><b>Telt Oppsett</b>
\n-Arbeidet fordeles hensiktsmessig
\n\n-åpning mot sentrum
\n\n-teltet strammes godt
\n\n-bruk av raier
\n\n-alle sider helt stramme
\n\n-helling på taket mot åpningen
\n\n-riktig høyde i telt (vinter kontra sommer)
\n\n-dobbel toppduk (luft lag, Hint: varme, regn, IR….)
\n\n-kuldegrop - hensikt utforming – tips
\n\n-vindskjerm - høyde, utforming, avstand til telt </string>
    <string name="innledning_tekst">
        
        Førstegangstjenesten A-B-C, er ikke laget som et lovverk. Men mere som et oppslagsverk.
        \n
        \nDen er laget for at du som avtjener førstegangstjenesten for første gang, skal ha muligheten til og finne hjelp og komfår.
        \n
        \nAppen er laget av rekrutter, som har vært inne alt. Og vet hvor vanskelig det kan være og finne informasjon samt hjelp. Alt er veldig nytt når du for førstegangen står der på innryksdagen. 
        \n
        \nDet er mange spørsmål som surrer rundt i hodet ditt. Hva skjer nå? Hva kan jeg forvente? Kommer jeg til å like meg her?
        \n
        \nDu er ikke alene om og tenke slikt. I denne appliksjonen har vi samlet det vi mener er det viktigste du kan trenge, og vi er alltid åpne for nye forslag.
        \n
        \nKommer du på noe under tiden din i førstegangstjenesten, ta da gjerne og send det inn til oss slik at vi kan legge det til. Og dermed hele tiden være oppdatert på det nyeste som skjer i Forsvaret.
        \n
        \nVi håper du kommer til og like appen og ha mye glede av den under din tid i rekrutten, samt ellers.
        \n
        \nHa en flott førstegangstjeneste og lykke til!
        
        
        
    </string>
    <string name="fon1">A - Alfa
        \n
        \nB - Bravo
        \n
        \nC - Charlie
        \n
        \nD - Delta
        \n
        \nE - Echo
        \n
        \nF - Foxtrot
        \n
        \nG - Golf
        \n
        \nH - Hotel
        \n
        \nI - India
        \n
        \nJ - Juliet
        \n
        \nK - Kilo
        \n
        \nL - Lima
        \n
        \nM - Mike
        \n
        \nN - November
	    \n
	    \nO - Oscar

    </string>
    <string name="fon2">
        
        P - Papa
        \n
        \nQ - Quebec
        \n
        \nR - Romeo
        \n
        \nS - Sierra
        \n
        \nT - Tango
        \n
        \nU - Uniform
        \n
        \nV - Victor
        \n
        \nW - Whiskey
        \n
        \nX - Xray
        \n
        \nY - Yankee
        \n
        \nZ - Zulu
        \n
        \nÆ - Ærlig
        \n
        \nØ - Østen
        \n
        \nÅ - Åse
    </string>
    <string name="hk_1">Innskutt på: </string>
    <string name="hk_2">Første middeltreff: </string>
    <string name="hk_3">Høyeste punkt: </string>
    <string name="hk_4">Siste middeltreff: </string>
    <string name="hk_5">Oppdater</string>
    <string name="hk_6">
		
        Enkelt forklart, munningen på din HK peker skrått oppover. Det vil si at når du skyter stiger kulen, før den vil sakte men sikkert synke.
        \n
        \nNår vi da skyter den inn på la oss si 30 meter, vil 30 meter være det første punkte hvor du treffer mitt i den svarte.
        \n
        \nFør 30 meter vil kulen stige den vil altså være lavere enn målet, så for og treffe mitten må du sikte rett over den svarte mitten.
        \n
        \nEtter 30 meter vil den være over målet før den når topppunktet og begynner og synke igjen. Før topp punktet må du sikte litt under da kulen vil være over målet.
        \n
        \nNår vi kommer til siste middel treff vil vi kunne sikte i mitten igjen. Etter dette vil kulen være under målet, så vi må begynne og sikte over målet igjen.
        \n
        \nGrafen under vil gi deg en litt bedre forståelse på kule banen. Streken rett over er hvor vi kan skyte mitt på det svarte.
        \n
        \nDataen over er for at det skal bli lett for deg og regne ut hvor du skal sikte med din type innskyting. Forsvaret skyter inn på forskjellige avstander, så og vite hvor dine treff punkter befinner seg er meget viktig for at du skal bli en god skyter.
        
	</string>
	<string name="hk_7">30</string>
	<string name="hk_8">180</string>
	<string name="hk_9">300</string>
	<string name="hk_10">47.5</string>
	<string name="hk_11">130</string>
	<string name="hk_12">200</string>
	<string name="result">Forkortelse</string>
	<string name="copy">Kopier</string>
	<string name="ok">OK</string>
	<string name="huskeregler_s"><b>SOLOAPEFE</b>
	    \nSituasjonen i ansvars området
	    \nOmrådet som skal overvåkes
	    \nLendet omkring posten
	    \nOpptreden på postdtedet
	    \nAvløsning
	    \nPoststedet
	    \nEgne avdelinger og naboposter
	    \nFeltrop
	    \nEgne patruljer

		</string>
<string name="huskeregler_s_1"><b>GLEMT</b>
	    \nGruppering
	    \nLokalisering av fienden
	    \nEtterforsyning
	    \nMelding til Troppsjef
	    \nTilbakeføring av sårede
	    
	    </string>
<string name="huskeregler_s_2"><b>Brasiliansk Porno Av Høyeste Kvalitet</b>
	    \n1. Behandle alltid alle våpen som om de er ladd.
	    \n2. Pek eller sikt aldri på noe du ikke er beredt på å bekjempe. *
	    \n3. Avsikre våpnet først i det øyeblikk våpenet rettes mot målet.
	    \n4. Hold fingeren av avtrekkeren til siktene er på målet og du har til hensikt å skyte.
	    \n5. Kjenn ditt mål - hva som er rundt, foran og bak det.
	    \n * unntak fra regel 2 kan gjøres på ordre jf. UD 2-1
	    
	    </string>
<string name="huskeregler_s_3"><b>De Franske Truser Har Hull \nNesten Helt Under</b>
	    \nDTG
	    \nFra
	    \nTil
	    \nHva
	    \nHvor
	    \nNår
	    \nHvorledes
	    \nUnderskrift
	    
		</string>
<string name="huskeregler_s_4"><b>TCCC</b>
	    \nTactical
	    \nCombat
	    \nCasual
	   	\nCare
	   	
		</string>
<string name="huskeregler_s_5"><b>CUF</b>
	   	\nCare 
	   	\nUnder
	   	\nFire
	   	
	   	</string>
<string name="huskeregler_s_6"><b>CBRN</b>
	   	\nChemical
	   	\nBiological
	   	\nRadiological
	   	\nNuclear
	   	
	   	</string>
<string name="huskeregler_s_7"><b>PAMPUS</b>
	   	\nPlutslig Hodepine
	   	\nAt Fienden Bruker Uvanlig Våpen
	   	\nMistenkelig Lukt, Væske eller Røyk
	   	\nPuste vansker
	   	\nUklart Syn
	   	\nSlim fra nese eller munn
	   	
		</string>
<string name="huskeregler_s_8"><b>GRAM</b>
	   	\nGrunnpunkt
	   	\nRetning
	   	\nAvstand
	   	\nMålbeskrivelse
	   	
	   	</string>
<string name="huskeregler_s_9"><b>RABB</b>
	   	\nRetning
	   	\nAvstand
	   	\nBeskrivelse av Målområde
	   	\nBeskrivelse av Mål
	    
	</string>
	   	<string name="huskeregler_s_10"><b>BLÅST</b>
	   	    \nB – Bevissthet
    \nL – Luftveier
    \nÅ – Åndedrett
    \nS – Sirkulasjon
    \nT – Temperatur</string>
	<string name="hk_13">
	    
	    <b>HK-416 Teknisk Data</b>
	    \n- Kaliber: 5.56 mm x 45
	    \n- Gassdrevet
	    \n- Vekt: 3.4 Kg
	    \n- Vekt m/sikte, fult mag. 4.4 kg
	    \n- Pipelengde 16.5
	    \n- Effektiv Rekkevidde 500 m
	    \n- Praktisk Rekkevidde 400 m
	    \n- Skuddtakt 12-15 RPS
	    \n- Utgangs Hastighet: ca 900 m/s
	    \n- Magasin Kapasitet: 30 Skudd
 
	</string>
</resources>