<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/image"
        android:src="@drawable/kulebane" />
    
     <LinearLayout
         android:id="@+id/adViewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg_shadow_ad"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_id" >
        </com.google.android.gms.ads.AdView>
        
        <ImageView
        android:id="@+id/noAdImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/image"
        android:visibility="gone" 
        android:src="@drawable/noad" />

    </LinearLayout>
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/nowCardStyle"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_1"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin" >

                        <RadioButton
                            android:id="@+id/radio0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/hk_7" />
                    </RadioGroup>

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hk_10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/WelcomeFace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_2"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/first_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_7"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_3"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/topp_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_8"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_4"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/last_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/main_margin"
                        android:layout_marginLeft="@dimen/main_margin"
                        android:layout_marginRight="@dimen/main_margin"
                        android:text="@string/hk_9"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hk_6" />

            <ImageView
                android:id="@+id/imageView2"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/kulebanedia" />

            <TextView
                android:id="@+id/textView3"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hk_13" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>