<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/image"
        android:src="@drawable/kneppetelt" />
    
  <LinearLayout
      android:id="@+id/adViewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bg_shadow_ad"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_id" >
        </com.google.android.gms.ads.AdView>
        
        <ImageView
        android:id="@+id/noAdImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/image"
        android:visibility="gone" 
        android:src="@drawable/noad" />

    </LinearLayout>
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/WelcomeFace"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kneppe_del_1" />

            <ImageView
                android:id="@+id/imageView3"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/stormknepp" />


            <ImageView
                android:id="@+id/imageView2"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/dobbelknepp" />

            <TextView
                android:id="@+id/textView2"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kneppe_del_2" />

            <ImageView
                android:id="@+id/iseng1"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/syverduk" />

            <TextView
                android:id="@+id/first_TV"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/knepe_del_3" />

            <ImageView
                android:id="@+id/imageView5"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/femduker" />

            <ImageView
                android:id="@+id/imageView6"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/tiduker" />
            
            <TextView
                android:id="@+id/first_TV"
                style="@style/nowCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kneppe_del_4" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
